--- a/style.css
+++ b/style.css
@@ -1,313 +1,291 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
     font-family: sans-serif;
+    box-sizing: border-box;
+}
+.nav-flex{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10px 10px 2px 10px;
+    align-items: center;
+    margin-bottom: 5px;
 }
 
+.flex-1{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
 a{
     text-decoration: none;
 }
-
-.flex1{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
+.nav-left{
+    height: 40px;
+    gap: 20px;
 }
-
-
-
-/* nav bar */
-
-.navBar{
-
-  height: 90px;
-  margin-inline: 40px;
-  align-items: center;
-  position: fixed;
-  z-index: 100;
-  top: 0px;
-  width: 95vw;
-  background-color: #fff;
+.nav-left>p>a{
+    padding-left: 20px;
+    font-size: 20px;
+    color: black;
+    border-left: 2px solid rgb(160,159,159);
+    font-weight: 100;
 }
-/* nav bar left section */
-.nav_left{
-  height: 40px;
-  gap: 20px;
+.nav-left>img{
+    height: 50px;
+    /* padding-right: 20px; */
 }
-
-.nav_left>img{
-    
-    height: 45px;
-    /* margin-right: 20px; */
-    
+.nav-right{
+    height: 40px;
+    justify-content: space-evenly;
+    font-size: 18px;
+    font-weight: 300;
+    gap: 20px;
+    width: 40vw;
 }
-
-.nav_left>p>a{
-   font-size: 20px;
-   font-weight: 100;
-   color: rgb(146, 145, 145);
-   border-left: 2px solid rgb(160, 159, 159);
-   padding-left: 20px;
-}
-
-/* nav bat right section */
-
-.nav_right{
-  justify-content: flex-end;
-   width: 50vw;
-   font-size: 18px;
-   font-weight: 400;
-   gap: 20px;
-   
-}
-
-.nav_right>div>a{
-    color: rgb(94, 94, 94);
+.nav-right>div>a{
+    color: rgb(94,94,94);
     padding-left: 5px;
-    font-size: 16px;
-
+    /* font-size: 18px; */
 }
-.nav_right>div>i {
-    color: rgb(4, 137, 246);
-
+.nav-right>div>i{
+    color: rgb(4,137,246);
 }
-
-.nav_right>button{
+.nav-right>button{
     width: fit-content;
     height: fit-content;
     padding-inline: 19px;
     padding-block: 7px;
     border: none;
-    background-color: #184655;
     border-radius: 15px;
+    background-color: #184655;
     color: white;
     font-weight: bold;
-    font-size: 1.1rem;
-    box-shadow: 2px 1px 3px gray;
-    transition: all 0.8s ease;
+    font-size: 18px;
+    box-shadow: 2px 2px 4px black;
+    transform: all 0.5s ease;
 }
-.nav_right>button:hover{
-    scale: 1.09;
+.nav-right>button:hover{
+    color: white;
+    scale: 1.05;
+    cursor: pointer;
 }
-
-/* Main - hero section */
-
 .hero{
-     margin: 10vw 40px 40px 40px;
-     background-image: url(./Rectangle\ 31.png);
-     background-size: cover;
-     height: 75vh;
-     border-radius: 20px;
-     justify-content: space-around;
-
+    display: flex;
+    margin: 5vw 40px 70px 40px;
+    background-image: linear-gradient(rgb(206,206,205),rgb(199,202,194),rgb(177,203,195));
+    background-size: cover;
+    height: 75vh;
+    border-radius: 20px;
+    justify-content: space-around;
 }
-
-.hero_text {
-    
+.search-bar{
     width: 40vw;
+    /* height: 60px; */
     display: flex;
     flex-direction: column;
     gap: 15px;
 }
-
-.hero_heading{
-    font-size: 45px;
-    color:#184655;
-    line-height: 60px;
+.heading{
+    font-size: 40px;
+    color: #184655;
+    line-height: 50px;
 }
-
-.hero_search_bar{
+.hero-search-bar{
     display: flex;
+    margin: 0px;
     align-items: center;
     background-color: white;
-    height: 70px;
+    height: 50px;
     position: relative;
-    width: 35vw;
     border: none;
+    width: 35vw;
     border-radius: 10px;
 }
-
-.hero_search_bar>i{
-  margin-left: 20px;
-  margin-top: 50px;
+.hero-search-bar>i{
+    margin-left: 20px;
+    margin-top: 50px;
     height: 70px;
     width: 20px;
 }
-
-.hero_search_bar>input {
+.hero-search-bar>input{
     margin-left: 10px;
-   height: 100%;
-   width: 100%;
-   border: none;
-   font-size: 20px;
-   outline: none;
-}
-
-
-
-.hero_search_bar>button{
-    background-color: #184655;
     height: 100%;
-    position: absolute;
-    right: 0px;
+    width: 100%;
+    border: none;
+    font-size: 15px;
+    outline: none;
+}
+.hero-search-bar>button{
+    background-color: #184655;
+    color: white;
+    height: 100%;
     width: 45%;
     border: none;
     border-radius: 0px 10px 10px 0px;
-    color: white;
-    font-size: 1.5rem;
+    font-size: 15px;
     font-weight: bold;
-    transition: all 1s ease-in-out;
+    transition: all 0.5s ease;
 }
-.hero_search_bar>button:hover {
-    scale: 1.06;
-    box-shadow: 2px 2px 4px gray;
-  
+.hero-search-bar>button:hover{
+    scale: 1.05;
+    box-shadow: 2px 2px 4px grey;
 }
-
-.hero_tag>span{
+.hero-tags>span{
     padding: 18px;
-    color: gray;
+    color: grey;
+    font-size: 20px;
 }
-
-.hero_img{
-    height: 50%;
+.hero-image{
+    height: 40%;
+    align-items: center;
 }
-
-
-/* Latest Blog Section */
-
-  .latest_blog{
-
-     margin: 40px;
-     border-radius: 20px;
-     background: linear-gradient(to left,#fefefe,#90d5f2);
-     gap: 10px;
-     display: flex;
-     flex-wrap: wrap;
-     justify-content: center;
-
-  }
-
-  .latest_blog_img{
-   margin-left: 20px;
-   margin-block: 20px;
-  }
-  .latest_blog_img>img {
-     width: 100%;
-     height: 100%;
-     border-radius: 10px;
-  }
-
-
-/* Blog content */
-
-  .blog_content{
+.latest-blog{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    border-radius: 20px;
+    background: linear-gradient(to left,#fefefe,#90d5f2);
+    gap: 10px;
+    flex-wrap: wrap;
+    margin: 30px;
+    transition: 0.5s;
+}
+.latest-blog:hover{
+    scale: 1.01;
+}
+.blog-image{
+    margin-left: 20px;
+    margin-block: 20px;
+}
+.blog-image>img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+.blog-content{
     flex-direction: column;
     justify-content: flex-start;
     position: relative;
-    margin:30px;
+    margin: 30px;
     width: 45%;
-    /* height: 500px; */
-  }
-
-.blog_heading{
+}
+.blog-heading{
     font-size: 35px;
-    color: #404040;
+    color: rgb(64,64,64);
 }
-
-.author_date{
-    margin-top: 20px;
-    width: 100%;
-    justify-content: space-between;
-    color: #6F6E6ED6;
-}
-.blog_para{
-    margin-top: 30px;
-   
-    text-justify: inter-word;
-}
-
-
-/* more blogs section */
-.moreBlog_section{
-   
-    margin: 40px;
+.details{
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+    margin: 20px;
+    width: 100%;
+    color: grey;
+    justify-content: space-between;
+}
+.content{
+    text-justify: initial;
+}
+.extra-blog{
+    display: flex;
+    flex-direction: row;
+    margin: 5vw 10px 40px 40px;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
-
-.item{
-    width: 30vw;
+.blog-1{
+    display: flex;
+    border: none;
+    justify-content: space-between;
+    flex-direction: column;
+    box-shadow: 2px 2px 4px grey;
     border-radius: 10px;
-    box-shadow: 2px 2px 10px rgb(80, 79, 79);
-    margin: 10px;
-  
-   
+    width: 400px;
+    margin: 20px;
+    transition: 0.5s;
 }
-.item_content{
+.blog-1:hover{
+    scale: 1.05;
+}
+.extra-blog-img{
+    width: fit-content;
+    margin-bottom: 4px;
+}
+.extra-blog-img>img{
     width: 100%;
-    padding: 0;
-    margin: 10px;
-   
+    height: 100%;
+    border-radius: 10px; 
 }
-.more_blog_img>img{
-    width: 30vw;
-    border-radius: 10px;
+.extra-blog-text{
+    padding: 20px;
 }
-#date{
-    margin-right: 20px;
+.extra-blog-head{
+    color: rgb(74,72,72);
+    font-family: sans-serif;
+    font-size: 25px;
+    margin-bottom: 5px;
 }
-#name{
-    margin-left: 5px;
+.author-date{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: grey;
 }
-
-.more_para{
-    margin: 5px;
-
+.extra-blog-content{
+    margin-bottom: 5px;
+    color: rgb(74,72,72);
 }
-
-.more_head{
-    font-size: 23px;
-    color: #404040;
-    font-weight: 300;
+.see-more{
+    text-align: right;
 }
-
-.foot{
-    background-image: url(./Rectangle\ 31.png);
+.see-more>a{
+    color: rgb(74,72,72);
+}
+.footer{
+    display: flex;
+    flex-direction: row;
+    background-image: linear-gradient(135deg,white,rgb(174, 211, 224),rgb(144, 176, 144));
     background-size: cover;
     align-items: center;
     justify-content: center;
-    gap: 90px;
+    gap: 80px;
     border: none;
     border-radius: 10px;
     margin: 40px;
     padding: 90px 30px 90px 30px;
     width: 95vw;
-
 }
-
-
-.footer_content>h3{
+.foot-img{
+   width: 50%;
+}
+.foot-img>img{
+    height: 100%;
+    width: 100%;
+}
+.foot-content{
+    padding-left: 200px;
+}
+.text{
+    font-family: sans-serif;
+    color: rgb(74,72,72);
+}
+.download{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 30px;
     font-weight: 200;
 }
-
-.footer_content>h1{
-    font-size: 45px;
+.company-name{
+    font-size: 40px;
+    margin-block: 5px;
 }
-
-.footer_content>h4{
+.extra{
     font-size: 30px;
     font-weight: 300;
     margin-bottom: 40px;
 }
-
-.footer_content>button{
+.foot-content>button{
     width: 15vw;
     height: 45px;
     border: none;
@@ -319,17 +297,6 @@ a{
 
 }
 
-.footer_content>button:hover{
+.foot-content>button:hover{
     scale: 1.08;
-}
-
-.footer_img{
-    width: 50%;
-    
-}
-
-.footer_img>img{
-    height: 100%;
-    width: 100%;
-   
 }
